Now only monospaced fonts are allowed for editor font.
* SettingsDialog.ui: Changed property of font selection widget.

--- a/gui/src/SettingsDialog.ui
+++ b/gui/src/SettingsDialog.ui
@@ -32,7 +32,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -54,6 +54,9 @@
             <widget class="QFontComboBox" name="editor_fontName">
              <property name="editable">
               <bool>false</bool>
+             </property>
+             <property name="fontFilters">
+              <set>QFontComboBox::MonospacedFonts</set>
              </property>
             </widget>
            </item>
