Started to rename class names and methods from camel case to underscore-

--- a/gui/src/settings-dialog.ui
+++ b/gui/src/settings-dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SettingsDialog</class>
- <widget class="QDialog" name="SettingsDialog">
+ <class>settings_dialog</class>
+ <widget class="QDialog" name="settings_dialog">
   <property name="windowModality">
    <enum>Qt::ApplicationModal</enum>
   </property>
